# Protologic.rs

./: .gitignore  build.ps1  cargo.toml  license.md  output-wasm32-wasi.wasm  readme.md
demo_fleet/: Cargo.toml
demo_fleet/src/: lib.rs  manoeuvre.rs  missile.rs  radio.rs  ship.rs  state.rs
protologic_core/: Cargo.toml
protologic_core/src/: constants.rs  cpu.rs  debugging.rs  guns.rs  lib.rs  maneuvering.rs  misc.rs  missile_launcher.rs  physics.rs  radar.rs  radio.rs  trap.rs  utils.rs  wait.rs  warhead.rs
protologic_core/src/highlevel/: actions.rs  constants.rs  mod.rs  queries.rs  wasi.rs
protologic_core/src/lowlevel/: actions.rs  asyncify.rs  constants.rs  mod.rs  queries.rs  quickstate.rs  wasi.rs
