[package]
name = "protologic_core"
version = "8.1.0"
description = "Rust bindings for Protologic"
homepage = "https://github.com/Protologic"
repository = "https://github.com/Protologic/Protologic.rs"
license = "MIT-0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"

[features]
mock_protologic = []